<resources>
	<string name="app_name">KestrelWeather</string>
	<string name="already_exists">Media file has already been added.</string>
	<string name="sync_started">Synchronization started.</string>
	<string name="sync_ended">Synchronization completed.</string>
	<string name="pref_title_server">Server</string>
	<string name="remote_server_development">http://198.74.57.149:3009</string>
	<string name="remote_server_development_name">Development</string>
	<string name="remote_server_production">http://192.168.195.170:3009</string>
	<string name="remote_server_production_name">Production</string>
	<string name="upload_report_url">%1$s/upload/</string>
	<string name="retrieve_latest_url">%1$s/event/since/</string>
	<string name="retrieve_report_url">%1$s/report/</string>
	<string name="open_weather_api">http://api.openweathermap.org/data/2.5/weather?lat=%1$s&amp;lon=%2$s</string>
	<string name="action_settings">Settings</string>
	<string name="action_database_filter">Filter</string>
	<string name="action_filter_synced">Show Synced</string>
	<string name="action_filter_unsynced">Show Unsynced</string>
	<string name="save">Save</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	<string name="discard">Discard</string>
	<string name="confirm">Confirm</string>
	<string name="cont">Continue</string>
	<string name="create">Create</string>
	<string name="edit">Edit</string>
	<string name="exit">Exit</string>
	<string name="exit_prompt">Are you sure you want to exit?</string>
	<string name="no_description">No description.</string>
	<string name="item_thumbnail">Thumbnail of the item.</string>
	<string name="unknown">Unknown</string>
	<string name="select_items">Select Items</string>
	<string name="items_selected">selected</string>
	<string name="feels_like">Feels</string>
	<string name="celsius_word">Celsius</string>
	<string name="sync">Sync</string>
	<string name="search"><i>Search</i></string>
	<string name="drawer_overview">MAP</string>
	<string name="drawer_create_report">CREATE</string>
	<string name="drawer_drafts">DRAFT</string>
	<string name="drawer_report_database">VIEW</string>
	<plurals name="drawer_footer_unsynced_count">
		<item quantity="zero">No unsynced local reports</item>
		<item quantity="one">1 unsynced local report</item>
		<item quantity="other">%d unsynced local reports</item>
	</plurals>
	<string name="drawer_footer_no_time">Last synced: Unknown</string>
	<string name="drawer_footer_time">Last synced:</string>
	<string name="action_overlay">Overlay</string>
	<string name="rain_overlay_name">Rain</string>
	<string name="rain_overlay_url">http://tile.openweathermap.org/map/rain/%1$d/%2$d/%3$d.png</string>
	<string name="cloud_overlay_name">Clouds</string>
	<string name="cloud_overlay_url">http://tile.openweathermap.org/map/clouds/%1$d/%2$d/%3$d.png</string>
	<string name="snow_overlay_name">Snow</string>
	<string name="snow_overlay_url">http://tile.openweathermap.org/map/snow/%1$d/%2$d/%3$d.png</string>
	<string name="pressure_overlay_name">Pressure</string>
	<string name="pressure_overlay_url">http://tile.openweathermap.org/map/pressure/%1$d/%2$d/%3$d.png</string>
	<string name="temp_overlay_name">Temperature</string>
	<string name="temp_overlay_url">http://tile.openweathermap.org/map/temp/%1$d/%2$d/%3$d.png</string>
	<string name="precipitation_overlay_name">Precipitation</string>
	<string name="precipitation_overlay_url">http://tile.openweathermap.org/map/precipitation/%1$d/%2$d/%3$d.png</string>
	<string name="wind_overlay_name">Wind</string>
	<string name="wind_overlay_url">http://tile.openweathermap.org/map/wind/%1$d/%2$d/%3$d.png</string>
	<string name="obtain_readings">Obtain Readings</string>
	<string name="view_readings">View Readings</string>
	<string name="notes">Notes</string>
	<string name="photos">Photos</string>
	<string name="audio_recording">Audio Recording</string>
	<string name="video_recording">Video Recording</string>
	<string name="connect_to_device">Connect To Device</string>
	<string name="disconnect_from_device">Disconnect from</string>
	<string name="no_device">No Device Connected</string>
	<string name="connecting">Connecting&#8230;</string>
	<string name="request_readings">Request readings from</string>
	<string name="no_readings">No readings available.</string>
	<string name="error_bluetooth_not_available">Error: Bluetooth is not available.</string>
	<string name="error_bluetooth_not_enabled">Error: Bluetooth is not enabled.</string>
	<string name="error_unable_to_request">Error: Unable to send request.</string>
	<string name="new_request_alert_title">Request Received!</string>
	<string name="new_request_alert_content">Would you like to send the saved simulation data or use current weather condition data?</string>
	<string name="new_request_use_current">Send Current Conditions</string>
	<string name="new_request_use_saved">Send Saved Values</string>
	<string name="sim_mode_alert_title">Simulation Mode Detected!</string>
	<string name="sim_mode_alert_content">Would you like to send the saved simulation data or continue with the normal connection?</string>
	<string name="sim_mode_use_saved">Send Saved Values</string>
	<string name="sim_mode_use_current_conditions">Use Current Conditions</string>
	<string name="paired_devices">Paired Devices</string>
	<string name="discovered_devices">Discovered Devices</string>
	<string name="discover_devices">Discover</string>
	<string name="discovering">Discovering&#8230;</string>
	<string name="no_paired_devices">No paired devices found.</string>
	<string name="no_discovered_devices">No devices found.</string>
	<string name="kestrel_simulation_field_hint">Enter Value</string>
	<string name="kestrel_simulation_temperature">Temperature</string>
	<string name="kestrel_simulation_humidity">Humidity</string>
	<string name="kestrel_simulation_pressure">Bar. Pressure</string>
	<string name="kestrel_simulation_pressure_trend">Pressure Trend</string>
	<string name="kestrel_simulation_heat_index">Heat Stress Index</string>
	<string name="kestrel_simulation_wind_speed">Wind Speed</string>
	<string name="kestrel_simulation_wind_dir">Wind Direction</string>
	<string name="kestrel_simulation_wind_chill">Wind Chill</string>
	<string name="kestrel_simulation_dew_pt">Dew Point</string>
	<string name="pressure_trend_up">Up</string>
	<string name="pressure_trend_down">Down</string>
	<string name="pressure_trend_up_value">0</string>
	<string name="pressure_trend_down_value">1</string>
	<string name="report_draft_list_empty">No reports.</string>
	<string name="report_draft_count">Drafts:</string>
	<string name="report_database_list_empty">No reports.</string>
	<string name="report_database_count">Reports:</string>
	<string name="weather">Weather Overview</string>
	<string name="kestrel_readings">Kestrel Readings</string>
	<string name="auxiliary_data">Auxiliary Data</string>
	<string name="trends">Trends</string>
	<string name="weather_status_description">The icon for the weather status.</string>
	<string name="icon_description">The icon for a list item.</string>
	<string name="sync_status_description">The icon representing the current sync status.</string>
	<string name="readings_error">Unable to fetch readings.</string>
	<string name="discard_message">Are you sure you want to discard the report?</string>
	<string name="action_add">Add</string>
	<string name="action_delete">Delete</string>
	<string name="action_download">Download</string>
	<string name="download_toast">Downloading %1$d items.</string>
	<string name="take_photo">Take Photo</string>
	<string name="attach_photo">Attach Photo</string>
	<string name="take_video">Take Video</string>
	<string name="attach_video">Attach Video</string>
	<string name="take_audio">Take Audio</string>
	<string name="attach_audio">Attach Audio</string>
	<string name="no_photos">No photos attached.</string>
	<string name="no_notes">No notes attached.</string>
	<string name="create_caps">CREATE</string>
	<string name="hint_note_title">Enter title</string>
	<string name="hint_note_content">Enter content</string>
	<string name="default_time">00:00</string>
	<string name="no_audio">No audio attached.</string>
	<string name="notification_title">Sync complete.</string>
	<plurals name="notification_content">
		<item quantity="one">1 report synced.</item>
		<item quantity="other">%d reports synced.</item>
	</plurals>
	<string name="no_video">No video attached.</string>
	<string name="secAbbr">sec</string>
	<string name="minAbbr">min</string>
	<string name="hAbbr">h</string>
	<string name="title_temp">Temperature</string>
	<string name="title_temp_units">Temperature Units</string>
	<string name="title_pressure">Pressure</string>
	<string name="title_pressure_units">Pressure Units</string>
	<string name="title_wind_speed">Wind Speed</string>
	<string name="title_wind_speed_units">Wind Speed Units</string>
	<string name="title_wind_direction">Wind Direction</string>
	<string name="title_wind_direction_units">Wind Direction Units</string>
	<string name="kestrel_simulation_temperature_message">Enter the temperature in degrees Celsius (ºC)</string>
	<string name="kestrel_simulation_humidity_message">Enter the humidity in percent (%)</string>
	<string name="kestrel_simulation_pressure_message">Enter the pressure in kilopascals (kPa)</string>
	<string name="kestrel_simulation_heat_index_message">Enter the heat index in degrees Celsius (ºC)</string>
	<string name="kestrel_simulation_wind_speed_message">Enter the wind speed in meters per second (m/s)</string>
	<string name="kestrel_simulation_wind_dir_message">Enter the wind direction in degrees (º)</string>
	<string name="kestrel_simulation_wind_chill_message">Enter the wind chill in degrees Celsius (ºC)</string>
	<string name="kestrel_simulation_dew_pt_message">Enter the dew point in degrees Celsius (ºC)</string>
	<string name="N">N</string>
	<string name="NNE">NNE</string>
	<string name="NE">NE</string>
	<string name="ENE">ENE</string>
	<string name="E">E</string>
	<string name="ESE">ESE</string>
	<string name="SE">SE</string>
	<string name="SSE">SSE</string>
	<string name="S">S</string>
	<string name="SSW">SSW</string>
	<string name="SW">SW</string>
	<string name="WSW">WSW</string>
	<string name="W">N</string>
	<string name="WNW">WNW</string>
	<string name="NW">NE</string>
	<string name="NNW">ENE</string>
	<string name="celsius">Celsius (°C)</string>
	<string name="celsiusAbbr">°C</string>
	<string name="fahrenheit">Fahrenheit (°F)</string>
	<string name="fahrenheitAbbr">°F</string>
	<string name="kilopascal">Kilopascal (kPa)</string>
	<string name="kilopascalAbbr">kPa</string>
	<string name="milibars">Milibars (mb)</string>
	<string name="milibarsAbbr">mb</string>
	<string name="inches_of_mercury">Inches of mercury (in)</string>
	<string name="inches_of_mercuryAbbr">in</string>
	<string name="meters_per_second">Meters per second (m/s)</string>
	<string name="meters_per_secondAbbr">m/s</string>
	<string name="kilometers_per_hour">Kilometers per hour (km/h)</string>
	<string name="kilometers_per_hourAbbr">km/h</string>
	<string name="miles_per_hour">Miles per hour (mph)</string>
	<string name="miles_per_hourAbbr">mph</string>
	<string name="knots">Knots (kn)</string>
	<string name="knotsAbbr">kn</string>
	<string name="cardinal">Cardinal</string>
	<string name="degrees">Degrees</string>
	<string name="degreesAbbr">°</string>
</resources>