<?xml version="1.0" encoding="utf-8"?>

<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/action_overlay"
		android:icon="@drawable/ic_action_globe"
		android:title="@string/action_overlay"
		android:showAsAction="ifRoom|withText">
		<menu>
			<item
				android:id="@+id/action_rain"
				android:title="@string/rain_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="100"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_cloud"
				android:title="@string/cloud_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="101"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_snow"
				android:title="@string/snow_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="102"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_pressure"
				android:title="@string/pressure_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="103"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_temp"
				android:title="@string/temp_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="104"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_precipitation"
				android:title="@string/precipitation_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="105"
				android:checkable="true"
				android:checked="false"/>
			<item
				android:id="@+id/action_wind"
				android:title="@string/wind_overlay_name"
				android:showAsAction="never"
				android:orderInCategory="106"
				android:checkable="true"
				android:checked="false"/>
		</menu>
	</item>
</menu>