<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@color/background_holo_light">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="?android:listPreferredItemHeightSmall"
			android:text="@string/paired_devices"
			android:textAppearance="?android:textAppearanceSmallPopupMenu"
			android:background="@color/gray_medium"
			android:textColor="@color/background_holo_light"
			android:layout_margin="1dp"
			android:paddingLeft="10dp"
			android:gravity="center_vertical"/>

		<ListView
			android:id="@+id/paired_devices"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background_holo_light"
			android:listSelector="#00000000"/>

		<TextView
			android:id="@+id/bluetooth_no_paired_devices"
			android:visibility="gone"
			android:text="@string/no_paired_devices"
			android:layout_width="match_parent"
			android:layout_height="?android:listPreferredItemHeightSmall"
			android:textAppearance="?android:textAppearanceSearchResultSubtitle"
			android:textColor="@color/gray_dark"
			android:background="@color/gray_light"
			android:gravity="center_vertical|center_horizontal"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="?android:listPreferredItemHeightSmall"
			android:text="@string/discovered_devices"
			android:textAppearance="?android:textAppearanceSmallPopupMenu"
			android:background="@color/gray_medium"
			android:textColor="@color/background_holo_light"
			android:layout_margin="1dp"
			android:paddingLeft="10dp"
			android:gravity="center_vertical"/>

		<ListView
			android:id="@+id/discovered_devices"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background_holo_light"
			android:listSelector="#00000000"/>

		<TextView
			android:id="@+id/bluetooth_no_discovered_devices"
			android:visibility="gone"
			android:text="@string/no_discovered_devices"
			android:layout_width="match_parent"
			android:layout_height="?android:listPreferredItemHeightSmall"
			android:textAppearance="?android:textAppearanceSearchResultSubtitle"
			android:textColor="@color/gray_dark"
			android:background="@color/gray_light"
			android:gravity="center_vertical|center_horizontal"/>
	</LinearLayout>

	<Button
		android:id="@+id/discover_devices_btn"
		android:layout_margin="1dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/discover_devices"
		android:textColor="@color/background_holo_light"
		android:background="@drawable/fragment_default_yellow_button_selector"/>
</LinearLayout>
