<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:paddingTop="10dp">

	<LinearLayout
		android:id="@+id/report_detail_overview"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/report_detail_weather_icon"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center"
			android:gravity="center"
			android:src="@drawable/ic_action_warning"
			android:tint="@color/black"
			android:contentDescription="@string/weather_status_description"/>

		<TextView
			android:id="@+id/report_detail_temperature"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/celsius"
			android:textSize="64sp"/>
	</LinearLayout>

	<TextView
		android:id="@+id/report_detail_weather_condition"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/unknown"
		android:textSize="24sp"
		android:paddingTop="10dp"/>

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="vertical">

			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginLeft="1dip"
				android:layout_marginRight="1dip"
				android:background="?android:attr/dividerHorizontal"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:paddingBottom="10dp"
				android:paddingTop="10dp"
				android:paddingLeft="50dp"
				android:paddingRight="50dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_action_location"
					android:contentDescription="@string/no_description"/>

				<TextView
					android:id="@+id/report_detail_latitude"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="@string/unknown"
					android:textSize="16sp"/>

				<TextView
					android:id="@+id/report_detail_longitude"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="@string/unknown"
					android:textSize="16sp"/>
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>